# streamarena

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  admin.css  admin.html  basketball.html  football.css  football.html  help.css  help.html  index.html  legal.css  live.css  live.html  login.css  login.html  new-popular.css  new-popular.html  new-popular.js  package.json  player.css  player.html  player.js  privacy.html  reset-password.html  script.js  settings.css  settings.html  settings.js  sports.css  sports.html  style.css  terms.html  upload.css  upload.html  vite.config.js
.github/workflows/: ci.yml
assets/: hero-previews.json  library.json
config/jackett/: bitsearch.yml
mobile/: .gitignore  app.json  babel.config.js  eas.json  eslint.config.js  package-lock.json  package.json  tailwind.config.js
mobile/patches/: react-native-vlc-media-player+1.0.98.patch
mobile/plugins/: withSigning.js
mobile/tests/: mobile-config.test.js  offline-background-download.test.js
public/: manifest.webmanifest  offline.css  offline.html  offline.js  sw.js
scripts/: auth-local-state-test.mjs  backup-mini.sh  check-architecture.mjs  check-external-providers.mjs  check-js-syntax.mjs  check-mini.sh  deploy-mini.sh  dev-rust.sh  fetch-browser-live-hls.mjs  frontend-smoke.mjs  hls-autoplay-test.mjs  hover-resolve-prewarm-test.mjs  initial-resume-test.mjs  install-mini-agents.sh  install-mini-server.sh  live-channel-catalog-test.mjs  live-iframe-playback-clock-test.mjs  local-cache-upgrade-watch-test.mjs  manual-source-switch-test.mjs  map-mini-ports.sh  media-track-labels-test.mjs  mini-interstellar-finish.sh  mini-interstellar-library.py  offline-artwork-test.mjs  playback-benchmark.mjs  playback-load-benchmark.mjs  probe-embed-resolve.mjs  refresh-hero-previews.py  resolve-cdnlivetv-hls.mjs  resolve-embed-min.mjs  resolve-external-embed-hls.mjs  resolve-matchstream-hls.mjs  resolve-ntvs-hls.mjs  resolve-streamed-hls.mjs  resolver-load-benchmark.mjs  serve-browser-hls-session.mjs  source-menu-tabs-test.mjs  subtitle-offset-test.mjs  test-nova-sports-mini.sh  update-mini-dns.sh  (+1 more)
src/: auth.rs  config.rs  edge_prewarm.rs  email.rs  embed_proxy.rs  error.rs  football.rs  health.rs  home_bootstrap.rs  library.rs  live.rs  local_torrent.rs  main.rs  media.rs  persistence.rs  playback_optimize.rs  process.rs  provider_registry.rs  rate_limit.rs  resolver.rs  routes.rs  secret_store.rs  static_files.rs  streaming.rs  tmdb.rs  twitch.rs  upload.rs  utils.rs
src-ui/: shared.js
src-ui/admin/: charts.jsx  providers.jsx  user-detail.jsx  widgets.jsx
src-ui/components/: brand-wordmark.jsx  feedback-nav.jsx  football-schedule-view.js  live-channels-view.js  live-channels-view.jsx  sports-schedule-view.js  sports-schedule-view.jsx  upload-section.js
src-ui/entries/: admin.js  basketball.js  football.js  help.js  home.js  legal.js  live.js  login.js  new-popular.js  player.js  reset-password.js  (+3 more)
(+156 files in other folders)
