[package]
name = "netflix-rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
dashmap = "6"
dotenvy = "0.15"
encoding_rs = "0.8"
flate2 = "1"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
mime_guess = "2"
multer = "3"
reqwest = { version = "0.12", default-features = false, features = ["charset", "gzip", "http2", "json", "rustls-tls", "stream"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
argon2 = "0.5"
getrandom = "0.3"
