[package]
name = "streamarena-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
dashmap = "6"
dotenvy = "0.15"
encoding_rs = "0.8"
flate2 = "1"
futures-util = "0.3"
libc = "0.2"
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls", "disable-upload"] }
mime_guess = "2"
multer = "3"
reqwest = { version = "0.13", default-features = false, features = ["charset", "form", "gzip", "http2", "json", "query", "rustls", "stream"] }
regex = "1"
quick-xml = "0.41"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
zeroize = "1"
argon2 = "0.5"
getrandom = "0.4"
hmac = "0.12"
sha2 = "0.10"
# `system` feature only: we use System memory + load average. Disk free/total
# and the process fd count come from libc (statvfs / getrlimit + /dev/fd), so the
# heavier disk/network/component collectors are left off to keep the build lean.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[dev-dependencies]
# `test-util` enables tokio's paused-time test clock (`start_paused`) so the
# staggered-hedge resolver tests run deterministically without real sleeps.
tokio = { version = "1", features = ["full", "test-util"] }

# StreamArena always starts librqbit with UPnP port forwarding disabled. Replace
# librqbit's unconditional UPnP dependency with a no-network compatibility shim
# so the disabled feature cannot pull its vulnerable XML parser into production.
[patch.crates-io]
librqbit-upnp = { path = "vendor/librqbit-upnp-disabled" }
